created my first Flask app

--- a/templates/about.html
+++ b/templates/about.html
@@ -6,7 +6,7 @@
  <link rel="stylesheet" href="/static/css/app.css">
 </head>
 <body>
- <h1>Place Your Name Here</h1>
- <p>Write a short paragraph about yourself here.</p>
+ <h1>Raniel Johnson</h1>
+ <p>I really like listening to music especially old school rap music like that of Tupac, Biggie and Nas. New school rappers arent that bad either but I prefer old school raps since it has more lyricism. I also enjoy watching anime such THE GREAT ONE PIECE and Naruto.</p>
 </body>
 </html>
